src/scss/components/_RSVP-area.scss
.RSVP-button {
    text-align: center;
    border-radius: 30px;
    color: white;
    padding: 0.4em;
    margin-bottom: 0.5em;

    &.going {
        background-color: $going;
    }

    &.maybe {
        background-color: $maybe;
    }

    &.not-going {
        background-color: $not-going;
    }

    &.not-responded {
        background-color: $dark-grey;
    }
}

.RSVP-flex-container {
    margin-left: 1em;
}


.RSVP-user-list {
    padding-left: 15px;
}

.confirm-event {
    text-align: center;
    border-radius: 50px;
    color: white;
    padding: 0.7em;
    margin-bottom: 0.5em;

    &.what {
        background-color: $what;
    }
    &.where {
        background-color: $where;
    }
    &.when {
        background-color: $when;
    }
}

.confirm-event-title {

    &.what {
        color: $what;
    }
    &.where {
        color: $where;
    }
    &.when {
        color: $when;
    }
}

.rsvp-title {
    margin: 0.2em 0;
}

/* Semantic UI override */

.ui.list, ol.ui.list, ul.ui.list {
    margin: 0.1em 0 !important;
}

.ui.horizontal.list > .item {
    margin-left: 0 !important;
}


.rsvp-list-items {
    color: $dark-grey !important;
}

